--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
   "name": "@sanishchirayath/tiny",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "description": "Removes all spaces from a string",
+  "license": "MIT",
+  "repository": "sanishchirayath1/tiny",
+  "main": "index.js",
+  "keywords": [
+    "tiny",
+    "npm",
+    "package",
+    "sanishchirayath"
+  ]
 }
